--- a/responsive-web-design/personal-portfolio-webpage/index.html
+++ b/responsive-web-design/personal-portfolio-webpage/index.html
@@ -1,74 +1,74 @@
 <!DOCTYPE html>
-<html lang="en" >
-  <head>
-    <meta charset="UTF-8">
-    <title>FCC: Personal Portfolio</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-
-
-  </head>
-  <body>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-
-    <nav id="navbar">
-      <li id="navli"><a class="nav-link" href="#welcome-section">About</a></li>
-      <li id="navli"><a class="nav-link" href="#projects">Work</a></li>
-      <li id="navli"><a class="nav-link" href="#contact">Contact</a></li>
-    </nav>
-
-    <section id="welcome-section">
-      <h1>Ben</h1>
-      <p>I make things</p>
-    </section>
-
-    <section id="projects">
-      <h1>My Work</h1>
-      <div id="row">
-        <div class="project-tile">
-          <a href="https://google.com" target="_blank">
-            <img class="work-pic" src="https://i.fiery.me/dBf3.png"></img>
-            <p>Product Page</p></a>
-        </div>
-        <div class="project-tile">
-          <a href="https://google.com" target="_blank">
-            <img class="work-pic" src="https://i.fiery.me/3Aiw.png"></img>
-            <p>Documentation Page</p></a>
-        </div>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>FCC: Personal Portfolio</title>
+  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+    integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+</head>
+<body>
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+  <nav id="navbar">
+    <li id="navli"><a class="nav-link" href="#welcome-section">About</a></li>
+    <li id="navli"><a class="nav-link" href="#projects">Work</a></li>
+    <li id="navli"><a class="nav-link" href="#contact">Contact</a></li>
+  </nav>
+  <section id="welcome-section">
+    <h1>Ben</h1>
+    <p>I make things</p>
+  </section>
+  <section id="projects">
+    <h1>My Work</h1>
+    <div id="row">
+      <div class="project-tile">
+        <a href="https://google.com" target="_blank">
+          <img class="work-pic" src="https://i.fiery.me/dBf3.png"></img>
+          <p>Product Page</p>
+        </a>
       </div>
-      <div id="row">
-        <div class="project-tile">
-          <a href="https://google.com" target="_blank">
-            <img class="work-pic" src="https://i.fiery.me/Z8rc.png"></img>
-            <p>Tribute Page</p></a>
-        </div>
-        <div class="project-tile">
-          <a href="https://google.com" target="_blank">
-            <img class="work-pic" src="https://i.fiery.me/KbDh.png"></img>
-            <p>template</p></a>
-        </div>
+      <div class="project-tile">
+        <a href="https://google.com" target="_blank">
+          <img class="work-pic" src="https://i.fiery.me/3Aiw.png"></img>
+          <p>Documentation Page</p>
+        </a>
       </div>
-      <div id="row">
-        <div class="project-tile">
-          <a href="https://google.com" target="_blank">
-            <img class="work-pic" src="https://i.fiery.me/KVKG.png"></img>
-            <p>Survey Form</p></a>
-        </div>
-        <div class="project-tile">
-          <a href="https://google.com" target="_blank">
-            <img class="work-pic" src="https://i.fiery.me/KbDh.png"></img>
-            <p>template</p></a>
-        </div>
+    </div>
+    <div id="row">
+      <div class="project-tile">
+        <a href="https://google.com" target="_blank">
+          <img class="work-pic" src="https://i.fiery.me/Z8rc.png"></img>
+          <p>Tribute Page</p>
+        </a>
       </div>
-      <a href="https://codepen.io/ben-14/#" target="_blank" id="profile-link">See More...</a>
-    </section>
+      <div class="project-tile">
+        <a href="https://google.com" target="_blank">
+          <img class="work-pic" src="https://i.fiery.me/KbDh.png"></img>
+          <p>template</p>
+        </a>
+      </div>
+    </div>
+    <div id="row">
+      <div class="project-tile">
+        <a href="https://google.com" target="_blank">
+          <img class="work-pic" src="https://i.fiery.me/KVKG.png"></img>
+          <p>Survey Form</p>
+        </a>
+      </div>
+      <div class="project-tile">
+        <a href="https://google.com" target="_blank">
+          <img class="work-pic" src="https://i.fiery.me/KbDh.png"></img>
+          <p>template</p>
+        </a>
+      </div>
+    </div>
+    <a href="https://codepen.io/ben-14/#" target="_blank" id="profile-link">See More...</a>
+  </section>
 
-    <footer id="contact">
-      <a href="https://github.com/ben-14/#" target="_blank" id="link"><i class="fab fa-github fa-2x"></i></a>
-      <a href="mailto:contact@bjm.me.uk" target="_blank" id="link"><i class="fas fa-at fa-2x"></i></a>
-    </footer>
+  <footer id="contact">
+    <a href="https://github.com/ben-14/#" target="_blank" id="link"><i class="fab fa-github fa-2x"></i></a>
+    <a href="mailto:contact@bjm.me.uk" target="_blank" id="link"><i class="fas fa-at fa-2x"></i></a>
+  </footer>
+</body>
 
-    <script  src="./script.js"></script>
-
-  </body>
 </html>
