--- a/front-end-libraries/random-quote-machine/index.html
+++ b/front-end-libraries/random-quote-machine/index.html
@@ -1,38 +1,42 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" crossorigin="anonymous">    
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>FCC: Random Quote Machine</title>
-  </head>
-  <body>
-    <div class="container">
-      <wrapper id="quote-box" class="row h-100 align-items-center">
-          <div class="jumbotron col">
-            <!-- <i class="fas fa-quote-left fa-2x"></i> -->
-            <div id="quotes">
-              <h1 id="text"></h1>
-              <h2 id="author"></h2>
-            </div>
-            <div id="buttons">
-              <a id="tweet-quote" href="#" target="_blank" class="btn btn-dark"><i id="tweet-img" class="fab fa-twitter"></i></a>
-              <button id="new-quote" class="btn float-right btn-dark" type="button" onClick="getQuote();">Next Quote</button>
-            </div>
-          </div>
-        </wrapper>
-        <footer>
-          By <a href="https://bjm.me.uk">Ben</a>
-        </footer>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css"
+    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
+    crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <title>FCC: Random Quote Machine</title>
+</head>
+<body>
+  <div class="container">
+    <wrapper id="quote-box" class="row h-100 align-items-center">
+      <div class="jumbotron col">
+        <!-- <i class="fas fa-quote-left fa-2x"></i> -->
+        <div id="quotes">
+          <h1 id="text"></h1>
+          <h2 id="author"></h2>
+        </div>
+        <div id="buttons">
+          <a id="tweet-quote" href="#" target="_blank" class="btn btn-dark"><i id="tweet-img"
+              class="fab fa-twitter"></i></a>
+          <button id="new-quote" class="btn float-right btn-dark" type="button" onClick="getQuote();">Next
+            Quote</button>
+        </div>
       </div>
-      
-    
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" crossorigin="anonymous"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js" crossorigin="anonymous"></script>
-      <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-      <script  src="./script.js"></script>
-      <script  src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js" crossorigin="anonymous"></script>
-    </body>
+    </wrapper>
+    <footer>
+      By <a href="https://bjm.me.uk">Ben</a>
+    </footer>
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+  <script src="./script.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js"
+    crossorigin="anonymous"></script>
+</body>
 </html>
