--- a/front-end-libraries/markdown-previewer/index.html
+++ b/front-end-libraries/markdown-previewer/index.html
@@ -18,7 +18,7 @@
   <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.6/marked.js'></script>
-  <script src='http://www.cdnlib.net/ar/dompurify/2.0.0/purify.min.js'></script>
+  <script src='https://www.cdnlib.net/ar/dompurify/2.0.0/purify.min.js'></script>
   <script src="./script.js" type="text/babel"></script>
 </body>
 </html>
