--- a/front-end-libraries/drum-machine/index.html
+++ b/front-end-libraries/drum-machine/index.html
@@ -1,19 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <link rel="stylesheet" type="text/css" href="style.css" />
+        <title>FCC: Drum Machine</title>
+    </head>
 
-<head>
-  <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <title>FCC: Drum Machine</title>
-</head>
-
-<body>
-  <div id="drum-machine" class="container"></div>
-  <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
-  <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
-  <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-  <script src="./script.js" type="text/babel"></script>
-</body>
-
+    <body>
+        <div id="drum-machine" class="container"></div>
+        <script
+            src="https://unpkg.com/react@16/umd/react.production.min.js"
+            crossorigin
+        ></script>
+        <script
+            src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"
+            crossorigin
+        ></script>
+        <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+        <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+        <script src="./script.js" type="text/babel"></script>
+    </body>
 </html>
