--- a/front-end-libraries/pomodoro-clock/index.html
+++ b/front-end-libraries/pomodoro-clock/index.html
@@ -12,7 +12,7 @@
     </head>
     
     <body>
-        <div id="app" class="container"></div>
+        <div id="app"></div>
         <audio
             id="beep"
             preload="auto"
