--- a/front-end-libraries/drum-machine/index.html
+++ b/front-end-libraries/drum-machine/index.html
@@ -7,7 +7,7 @@
     </head>
     
     <body>
-        <div id="drum-machine" class="container"></div>
+        <div id="drum-machine"></div>
         <script
             src="https://unpkg.com/react@16/umd/react.production.min.js"
             crossorigin
