--- a/front-end-libraries/javascript-calculator/index.html
+++ b/front-end-libraries/javascript-calculator/index.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <div id="app" class="container"></div>
+        <div id="app"></div>
         <script
             src="https://unpkg.com/react@16/umd/react.production.min.js"
             crossorigin
