--- a/data-visualization/scatter-plot/index.html
+++ b/data-visualization/scatter-plot/index.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <h1 id="title">Doping in Pro Cycling</h1>
+        <h1 id="title">Doping in Professional Cycling</h1>
         <div id="graph"></div>
 
         <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
