--- a/data-visualization/scatter-plot/index.html
+++ b/data-visualization/scatter-plot/index.html
@@ -8,6 +8,8 @@
 
     <body>
         <h1 id="title">Doping in Professional Cycling</h1>
+        <p>35 Fastest times up Alpe d'Huez</p>
+
         <div id="graph"></div>
 
         <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
