--- a/data-visualization/tree-map/index.html
+++ b/data-visualization/tree-map/index.html
@@ -3,21 +3,21 @@
     <head>
         <meta charset="utf-8" />
         <link rel="stylesheet" type="text/css" href="style.css" />
-        <title>FCC: Choropleth Map</title>
+        <title>FCC: Tree Map</title>
     </head>
 
     <body>
         <div id="heading">
-            <h1 id="title">United States Educational Attainment</h1>
+            <h1 id="title">Movie Sales</h1>
             <p id="description">
-                Percentage of adults age 25 and older with a bachelor's degree
-                or higher (2010-2014)
+                Top 100 Highest Grossing Movies Grouped By Genre
             </p>
         </div>
         <div id="map"></div>
 
         <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
         <script src="https://d3js.org/d3.v5.min.js"></script>
+        <!-- <script src="https://unpkg.com/topojson@3"></script> -->
         <script src="https://d3js.org/topojson.v2.min.js"></script>
         <script src="./script.js"></script>
     </body>
